On a way to solve a problem that on an HTC phone puzzle capture fails with very high rate (more than 75%.)
Added some log output in CaptureActivity and added toasts to distinguish
cancel and failure (in MainActivity).

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,6 +10,8 @@
     -->
     <string name="button_label_about">About...</string>
     <string name="toast_text_impossible">No solution found.</string>
+    <string name="toast_text_recognition_failed">Puzzle recognition failed.</string>
+    <string name="toast_text_recognition_cancelled">Puzzle recognition cancelled.</string>
 
     <string-array name="digits">
         <item></item>
