--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <string name="app_name">Number Place Breaker</string>
     <string name="app_description">Capture and solve Number Place puzzles</string>
@@ -8,7 +8,7 @@
          Don't use &#8230; for the following "...".
          Otherwise, the label looks strangely on most of Japanese phones.
     -->
-    <string name="button_label_about">About...</string>
+    <string name="button_label_about" tools:ignore="TypographyEllipsis">About...</string>
     <string name="toast_text_impossible">No solution found.</string>
     <string name="toast_text_recognition_failed">Puzzle recognition failed.</string>
     <string name="toast_text_recognition_cancelled">Puzzle recognition cancelled.</string>
